--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -18,93 +18,314 @@
 <div class="container-fluid" id="TrainingTopic">
     <div class="row"><!-- row 1-->
         <div class="col-md-12" style="padding:40px;background-color:blue;margin-bottom: 30px;"></div>
-            <div class="col-sm-12 col-md-10 col-lg-7">
+        <div class="col-sm-12 col-md-10 col-lg-7">
 
-                    <form class="" @submit.prevent="verifyTrainingForm">
-                        <legend>Ajouter une formation</legend>
-                        <table>
-                            <td width="20%">
-                                <div class="form-group" :class="{'input': true,'has-error': errors.has('formation') }">
-                                    <label for="formation" class="label-control">Formation</label><br/><br/>
-                                    <input type="text" v-validate="'formation'" class="form-control" id="formation" name="formation"
-                                           v-model="training.trainingTitle"
-                                           @focus="msgtrainingTitle = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                           @blur="messageTrainingTitle" placeholder="Formation">
+            <form class="" @submit.prevent="verifyTrainingForm">
+                <legend>Ajouter une formation</legend>
+                <table>
+                    <td width="20%">
+                        <div class="form-group" :class="{'input': true,'has-error': errors.has('formation') }">
+                            <label for="formation" class="label-control">Formation</label><br/><br/>
+                            <input type="text" v-validate="'formation'" class="form-control" id="formation"
+                                   name="formation"
+                                   v-model="training.trainingTitle"
+                                   @focus="msgtrainingTitle = false; confirmFormation = false; isNewTrainingTitle = true;"
+                                   @blur="messageTrainingTitle" placeholder="Formation">
 
 
-                                </div>
-                            </td>
-                            <td width="15%">
-                                <div class="form-group">
-                                    <label>1/2 journées</label><br/><br/>
-                                    <select class="form-control" v-model="training.numberHalfDays"
-                                            @focus="msgnumberHalfDays = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                            @blur="messageNumberHalfDays">
-                                        <option value="" disabled selected style="display:none;">--</option>
-                                        <option v-for="n in 200">{{n}}</option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td width="20%">
-                                <div class="form-group">
-                                    <label>Thèmes</label><br/><br/>
-                                    <select class="form-control" v-model="training.topicDescription"
-                                            @focus="msgtopic = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                            @blur="messageTopic">
-                                        <option value="" disabled selected style="display:none;">--</option>
-                                        <option v-for="option in optionsTopic" :value="option">{{ option.name }}
-                                        </option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td class="text-center" width="20%">
-                                <div class="form-group">
-                                    <label></label><br/><br/>
-                                    <input type="submit" class="btn btn-default" value="Valider" style="width:80%"/>
-                                </div>
+                        </div>
+                    </td>
+                    <td width="15%">
+                        <div class="form-group">
+                            <label>1/2 journées</label><br/><br/>
+                            <select class="form-control" v-model="training.numberHalfDays"
+                                    @focus="msgnumberHalfDays = false; confirmFormation = false; isNewTrainingTitle = true;"
+                                    @blur="messageNumberHalfDays">
+                                <option value=""  disabled selected style="display:none;">--</option>
+                                <option v-for="n in 200">{{n}}</option>
+                            </select>
+                        </div>
+                    </td>
+                    <td width="20%">
+                        <div class="form-group">
+                            <label>Thèmes</label><br/><br/>
+                            <select class="form-control" v-model="training.topicDescription"
+                                    @focus="msgtopic = false; confirmFormation = false; isNewTrainingTitle = true;"
+                                    @blur="messageTopic">
+                                <option value=""  disabled selected style="display:none;">--</option>
+                                <option v-for="option in optionsTopic" :value="option">{{ option.name }}
+                                </option>
+                            </select>
+                        </div>
+                    </td>
+                    <td class="text-center" width="20%">
+                        <div class="form-group">
+                            <label></label><br/><br/>
+                            <input type="submit" class="btn btn-default" value="Valider" style="width:80%"/>
+                        </div>
 
-                            </td>
-                            <td width="30%" class="td-right">
-                                <form>
-                                    <div class=" form-group has-feedback" :class="{'input': true,'has-error': errors.has('topic') }">
-                                        <label class="label-control" for="topic">Nouveau thème</label><br/><br/>
-                                        <input type="text" class="form-control" id="topic" name="topic" v-model="topic.name"
-                                               @focus="msgname = false; confirmTopic = false; isNewTopic = true;"
-                                               @blur="messageName" placeholder="Thème" v-validate="'topic'">
-                                        <span class="glyphicon glyphicon-floppy-save form-control-feedback"
-                                              @click="verifyTopicForm" style="margin-top: 20px;"></span>
-                                    </div>
-                                </form>
+                    </td>
+                    <td width="30%" class="td-right">
+                        <form>
+                            <div class=" form-group has-feedback"
+                                 :class="{'input': true,'has-error': errors.has('topic') }">
+                                <label class="label-control" for="topic">Nouveau thème</label><br/><br/>
+                                <input type="text" class="form-control" id="topic" name="topic" v-model="topic.name"
+                                       @focus="msgname = false; confirmTopic = false; isNewTopic = true;"
+                                       @blur="messageName" placeholder="Thème" v-validate="'topic'">
+                                <span class="glyphicon glyphicon-floppy-save form-control-feedback"
+                                      @click="verifyTopicForm" style="margin-top: 20px;"></span>
+                            </div>
+                        </form>
 
-                            </td>
-                            </tr>
-                            <tr>
-                                <td colspan="4" class="text-center">
-                                    <div>
-                                        <span v-show="!isNewTrainingTitle" class="text-center color-red ">Une formation identique existe déjà dans le système.</span>
-                                        <span v-show="(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
-                                              class="text-center color-red ">Veuillez remplir tous les champs.</span>
-                                        <span v-show="confirmFormation && isNewTrainingTitle && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
-                                              class="text-center color-green ">La formation a été créée avec succès.</span>
-                                        <span v-show="errors.has('formation') && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)" class="color-red">{{ errors.first('formation') }}</span>
+                    </td>
+                    </tr>
+                    <tr>
+                        <td colspan="4" class="text-center">
+                            <div>
+                                <span v-show="!isNewTrainingTitle" class="text-center color-red ">Une formation identique existe déjà dans le système.</span>
+                                <span v-show="(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
+                                      class="text-center color-red ">Veuillez remplir tous les champs.</span>
+                                <span v-show="confirmFormation && isNewTrainingTitle && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
+                                      class="text-center color-green ">La formation a été créée avec succès.</span>
+                                <span v-show="errors.has('formation') && !(msgtrainingTitle || msgnumberHalfDays || msgtopic)"
+                                       class="color-red">{{ errors.first('formation') }}</span>
 
-                                    </div>
-                                </td>
-                                <td class="text-center td-right" style="height: 60px;">
-                                    <div>
-                                        <span v-show="msgname" class="text-center color-red ">Veuillez remplir le champ.</span>
-                                        <span v-show="!isNewTopic" class="text-center color-red ">Un thème identique existe déjà dans le système.</span>
-                                        <span v-show="confirmTopic && isNewTopic && !msgname" class="text-center color-green ">Le nouveau thème a été ajouté avec succès.</span>
-                                        <span v-show="errors.has('topic') && !msgname" class="color-red">{{ errors.first('topic') }}</span>
-                                    </div>
-                                </td>
-                            </tr>
+                            </div>
+                        </td>
+                        <td class="text-center td-right" style="height: 60px;">
+                            <div>
+                                <span v-show="msgname"  class="text-center color-red ">Veuillez remplir le champ.</span>
+                                <span v-show="!isNewTopic" class="text-center color-red ">Un thème identique existe déjà dans le système.</span>
+                                <span v-show="confirmTopic && isNewTopic && !msgname" class="text-center color-green ">Le nouveau thème a été ajouté avec succès.</span>
+                                <span v-show="errors.has('topic') && !msgname"  class="color-red">{{ errors.first('topic') }}</span>
+                            </div>
+                        </td>
+                    </tr>
 
-                        </table>
-                    </form>
+                </table>
+            </form>
 
-            </div>
+        </div>
     </div><!--Fin row 1-->
+</div>
+
+
+    <div class="container-fluid" id="addFormation">
+    <div class="row"><!-- row 1-->
+        <div class="col-md-12" style="padding:10px;"></div>
+        <div class="col-sm-12 col-md-10 col-lg-7">
+
+            <div class="row">
+
+                <div class="col-lg-7 col-md-7 text-center">
+                <legend>Formation ajoutées</legend>
+                </div>
+            </div>
+                <table class="table table-borderless">
+                    <div class="row">
+                        <thead>
+                        <tr>
+                            <th class="col-lg-2 col-md-2">MOBILE</th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2 deletetopic"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</th>
+                        </tr>
+                        </thead>
+
+
+                        </div>
+
+                        <div class="row">
+                        <tr >
+
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+
+                            <td class="col-lg-2 col-md-2">
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Android"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group" value="Xamarin"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"  value="iOS"/>
+
+
+                            </td>
+
+                        </tr>
+
+                    </div>
+
+                    </tr>
+
+                    <div class="row">
+                        <thead>
+                        <tr>
+                            <th class="col-lg-2 col-md-2">MOBILE</th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2 deletetopic"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</th>
+                        </tr>
+                        </thead>
+
+
+                    </div>
+
+                    <div class="row">
+                        <tr>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+
+                            <td class="col-lg-2 col-md-2">
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Android"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"  value="Xamarin"/>
+
+                            </td>
+                            <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group" value="iOS"/>
+
+
+                            </td>
+
+                        </tr>
+
+                    </div>
+
+                    <div class="row">
+                        <thead>
+                        <tr>
+                            <th class="col-lg-2 col-md-2">MOBILE</th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2"></th>
+                            <th class="col-lg-2 col-md-2 deletetopic"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</th>
+                        </tr>
+                        </thead>
+
+
+                    </div>
+
+                    <div class="row">
+                    <tr>
+                        <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"
+                                       value="Java"/>
+
+                        </td>
+
+                        <td class="col-lg-2 col-md-2">
+
+                            <input type="submit" class="btn btn-default btn-group"
+                                   value="Java"/>
+
+                        </td>
+
+                        <td class="col-lg-2 col-md-2">
+
+
+                            <input type="submit" class="btn btn-default btn-group"
+                                   value="Java"/>
+
+                        </td>
+                        <td class="col-lg-2 col-md-2">
+
+
+                            <input type="submit" class="btn btn-default btn-group"
+                                   value="Android"/>
+
+                        </td>
+                        <td class="col-lg-2 col-md-2">
+
+
+                            <input type="submit" class="btn btn-default btn-group"  value="Xamarin"/>
+
+                        </td>
+                        <td class="col-lg-2 col-md-2">
+
+
+                                <input type="submit" class="btn btn-default btn-group"  value="OLKJUIPKJHQSKOIUNHJL"/>
+
+
+                        </td>
+
+                        </tr>
+
+                    </div>
+
+
+
+                </table>
+
+
+        </div>
+    </div><!--Fin row 2-->
+
 </div>
 <script src="app/controller/registerTrainingTopic.js"></script>
 </body>
