[US#GF17] Taille bouton fixée

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -131,7 +131,7 @@
                             <th class="col-lg-2 col-md-2"></th>
                             <th class="col-lg-2 col-md-2"></th>
                             <th class="col-lg-2 col-md-2"></th>
-                            <th class="col-lg-2 col-md-2 deletetopic"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</th>
+                            <th class="col-lg-2 col-md-2 deletetopic"><a class="text-warning" href="#"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
                         </tr>
                         </thead>
 
