[US#GF17] "Supprimer ce thème" devient rouge lors du passage de la souris et changement de la taille des boutons pour 20 caractères

--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -113,8 +113,8 @@
 
 
     <div class="container-fluid" id="addFormation">
-    <div class="row"><!-- row 1-->
-        <div class="col-md-12" style="padding:10px;"></div>
+    <div class="row" ><!-- row 1-->
+        <div class="col-md-12 col-lg-12 col-sm-12" style="padding:10px;"></div>
         <div class="col-sm-12 col-md-10 col-lg-7">
 
             <div class="row">
@@ -136,7 +136,7 @@
                                     <th class="col-lg-2 col-md-2"></th>
                                     <th class="col-lg-2 col-md-2"></th>
                                     <th class="col-lg-2 col-md-2"></th>
-                                    <th class="col-lg-2 col-md-2 deletetopic"><a class="text-warning" href="#"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
+                                    <th class="col-lg-2 col-md-2 deletetopic"><a href="#" class="changecolor"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
                                 </tr>
                                 </thead>
                             </div>
