--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -10,7 +10,6 @@
     <script src="lib/vue.js"></script>
     <script src="lib/vee-validate.js"></script>
     <script src="lib/vue-resource.js"></script>
-    <script src="lib/vue-router.js"></script>
 
     <title>AjouterFormation</title>
 </head>
@@ -31,7 +30,8 @@
                                    name="formation"
                                    v-model="training.trainingTitle"
                                    @focus="msgtrainingTitle = false; confirmFormation = false; isNewTrainingTitle = true;"
-                                   @blur="messageTrainingTitle" placeholder="Formation">
+                                   @blur="messageTrainingTitle" placeholder="Formation"
+                                   maxlength="20">
 
 
                         </div>
@@ -123,26 +123,24 @@
                 <legend>Formation ajoutées</legend>
                 </div>
             </div>
-                <table>
+                <table class="fix">
                     <tr>
                         <td>
-                        <table class="table table-borderless tabnone" v-for="topic in optionsTopic" v-show="typeof TrainingFilter(topic.name) !== 'undefined' && TrainingFilter(topic.name).length > 0 ">
+                        <table class="table table-borderless tabnone fix" v-for="topic in optionsTopic" v-show="typeof TrainingFilter(topic.name) !== 'undefined' && TrainingFilter(topic.name).length > 0 ">
 
                             <div class="row">
                                 <thead>
                                 <tr>
-                                    <th class="col-lg-2 col-md-2">{{topic.name}}</th>
-                                    <th class="col-lg-2 col-md-2"></th>
-                                    <th class="col-lg-2 col-md-2"></th>
-                                    <th class="col-lg-2 col-md-2"></th>
-                                    <th class="col-lg-2 col-md-2"></th>
-                                    <th class="col-lg-2 col-md-2 deletetopic"><a href="#" class="changecolor"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
+                                    <th class="col-lg-3 col-md-3">{{topic.name}}</th>
+                                    <th class="col-lg-3 col-md-3"></th>
+                                    <th class="col-lg-3 col-md-3"></th>
+                                    <th class="col-lg-3 col-md-3 deletetopic"><a href="#" class="changecolor"><span class="glyphicon glyphicon-trash"></span> Supprimer ce thème</a></th>
                                 </tr>
                                 </thead>
                             </div>
                             <div class="row">
                                 <tr v-for="group in TrainingTraim(TrainingFilter(topic.name))">
-                                    <td class="col-lg-2 col-md-2" v-for="training in group">
+                                    <td class="col-lg-3 col-md-3" v-for="training in group">
                                         <button class="btn btn-default btn-group">{{training.trainingTitle}}</button>
                                     </td>
                                 </tr>
