--- a/src/main/webapp/addTrainingTopic.html
+++ b/src/main/webapp/addTrainingTopic.html
@@ -15,7 +15,7 @@
     <title>AjouterFormation</title>
 </head>
 <body>
-<div class="container-fluid" id="TrainingTopic">
+<div class="container-fluid" id="TrainingTopic"  v-cloak>
     <div class="row"><!-- row 1-->
         <div class="col-md-12" style="padding:40px;background-color:blue;margin-bottom: 30px;"></div>
             <div class="col-sm-12 col-md-10 col-lg-7">
